Updated swagger so that I can test the retching of the monster database for the spinner wheel. And setup basic spinner wheel that will randomly select a monster from databse after spending a point. I want to now go and design the front end to look better with an actual wheel instead of a button.
